# ragtime

./: Cargo.toml  README.md
.github/workflows/: publish.yml  rust.yml
src/: error.rs  lib.rs  main.rs  router.rs  utils.rs
src/rag/: mod.rs
