[package]
name = "ragtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
clap = { version = "^4.5.8", features = ["derive"] }
tracing = "0.1.40"
anyhow = "1.0.86"
tower-http = { version = "0.5.2", features = ["trace", "timeout"] }
axum = "0.7.5"
clap_derive = "4.5.8"
qdrant-client = "1.10.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures = "0.3.30"
